--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ exclude = [
 
 [project]
 name = "triade"
-version = "0.2.1"
+version = "0.3.0.dev1"
 authors = [
   { name="Lucas L. S. Haine", email="lucaslshaine@gmail.com" },
 ]
