--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,13 @@ exclude = [
     "Makefile",
     "GNUmakefile",
     "dev_requirements.txt",
+    "TODO.txt",
     ".?*",
 ]
 
 [project]
 name = "triade"
-version = "0.3.0"
+version = "0.4.0"
 authors = [
   { name="Lucas L. S. Haine", email="lucaslshaine@gmail.com" },
 ]
